# ha-linux-agent

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  flake.nix
crates/agentd/: Cargo.toml
crates/agentd/src/: main.rs
crates/backend-gamescope/: Cargo.toml
crates/backend-gamescope/src/: lib.rs
crates/backend-generic/: Cargo.toml
crates/backend-generic/src/: dbus.rs  lib.rs
crates/backend-hardware/: Cargo.toml
crates/backend-hardware/src/: lib.rs
crates/backend-headscale/: Cargo.toml
crates/backend-headscale/src/: lib.rs
crates/backend-kde/: Cargo.toml
crates/backend-kde/src/: dbus.rs  lib.rs
crates/backend-launcher/: Cargo.toml
crates/backend-launcher/src/: lib.rs
crates/backend-lutris/: Cargo.toml
crates/backend-lutris/src/: lib.rs
crates/backend-niri/: Cargo.toml
crates/backend-niri/src/: lib.rs
crates/backend-syncthing/: Cargo.toml
crates/backend-syncthing/src/: lib.rs
crates/backend-zfs/: Cargo.toml
crates/backend-zfs/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  config.rs  discovery.rs  lib.rs  model.rs  traits.rs
packaging/: config.example.toml
packaging/systemd/: ha-linux-agent.service
