[package]
name = "ha-linux-agentd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Home Assistant companion daemon for Linux"

[[bin]]
name = "ha-linux-agent"
path = "src/main.rs"

[dependencies]
ha-agent-core.workspace = true
ha-agent-backend-generic.workspace = true
ha-agent-backend-niri.workspace = true
ha-agent-backend-kde.workspace = true
ha-agent-backend-zfs.workspace = true
ha-agent-backend-syncthing.workspace = true
ha-agent-backend-headscale.workspace = true
ha-agent-backend-gamescope.workspace = true
ha-agent-backend-lutris.workspace = true
ha-agent-backend-launcher.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
