[package]
name = "ha-agent-backend-gamescope"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "gamescope gaming-session sensors for ha-linux-agent"

[dependencies]
ha-agent-core.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
