[package]
name = "ha-agent-backend-headscale"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tailscale/headscale mesh connectivity sensors for ha-linux-agent"

[dependencies]
ha-agent-core.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
