[package]
name = "ha-agent-backend-kde"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "KDE Plasma sensors for ha-linux-agent: current Activity"

[dependencies]
ha-agent-core.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
zbus.workspace = true
