[package]
name = "ha-agent-backend-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Remote systemd-unit session switching (kiosk <-> gaming mode, etc.) for ha-linux-agent"

[dependencies]
ha-agent-core.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
