[package]
name = "ha-agent-backend-zfs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ZFS pool/dataset health sensors for ha-linux-agent"

[dependencies]
ha-agent-core.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
