[package]
name = "ha-agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core traits, config, MQTT/HA-discovery plumbing for ha-linux-agent"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
rumqttc.workspace = true
tracing.workspace = true
